# catchrobo2025_common

./: .gitmodules  CMakeLists.txt  project_name.hpp.in
include/catchrobo2025/: angle.hpp  can.hpp  constant.hpp  tutmath.hpp
include/catchrobo2025/can/: publisher.hpp  subscription.hpp
include/catchrobo2025/controller/: nct.hpp  pid.hpp
include/catchrobo2025/filter/: cos.hpp  low_pass.hpp
include/catchrobo2025/messages/: can_message.hpp  end_effector_mode_telemetry.hpp  end_effector_order.hpp  localization.hpp  main_arm_mode_telemetry.hpp  mode_order.hpp  pos_inst.hpp
include/catchrobo2025/msg/: control_mode.hpp  end_effector_mode_telemetry.hpp  end_effector_order.hpp  enum_set.hpp  hand_order.hpp  hand_telemetry.hpp  localization.hpp  main_arm_mode_telemetry.hpp  mode_order.hpp  pos_inst.hpp  primitive.hpp  stocker_order.hpp  stocker_telemetry.hpp  vector2.hpp
include/kyourobo2026/: can.hpp
include/kyourobo2026/can/: subscription_queue.hpp
include/kyourobo2026/msg/: feetech_position.hpp  open_close_state.hpp  pwm_servo_position.hpp  servo_position.hpp
